# Chess_Engine

./: README.md
source/: BitBoard.hpp  BitDefs.hpp  Board-Helpers.cpp  Board-Initialize.cpp  Board-Move.cpp  Board.hpp  CMakeLists.txt  Engine-Calculation.cpp  Engine-Initialization.cpp  Engine-Interface.cpp  Engine-SearchHelpers.cpp  Engine-calculation.cpp  Engine.hpp  EngineState.hpp  EvalTypes.hpp  Evaluation.cpp  Evaluation.hpp  EvaluationContext.hpp  HashTable.hpp  Value.hpp  main.cpp  uci_standard.txt
